# deep-optimizer-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: moons.yaml  xor.yaml
src/: __init__.py  config.py  datasets.py  evaluation.py  models.py  plotting.py  train.py  training.py  utils.py
thermal-inference-lab/: .gitignore  README.md  pyproject.toml
thermal-inference-lab/tests/: test_boltzmann_distribution.py  test_contrastive_divergence.py  test_exact_partition.py  test_experiments_smoke.py  test_gibbs_sampler.py  test_ising_energy.py  test_ising_local_energy.py  test_magnetization.py  test_math_utils.py  test_metropolis_sampler.py  test_optimizers_adam.py  test_optimizers_sgd.py  test_parameter_estimation.py  test_pseudolikelihood.py  test_rbm_energy.py  test_rng.py  test_sampler_reproducibility.py  test_schedules.py  test_simulated_annealing.py  test_temperature_estimation.py
thermal-inference-lab/thermal_inference_lab/: __init__.py
thermal-inference-lab/thermal_inference_lab/annealing/: __init__.py  acceptance.py  schedules.py  simulated_annealing.py
thermal-inference-lab/thermal_inference_lab/core/: __init__.py  config.py  constants.py  exceptions.py  logging_utils.py  math_utils.py  rng.py  serialization.py  validation.py
thermal-inference-lab/thermal_inference_lab/datasets/: __init__.py  rbm_patterns.py  synthetic_spins.py
thermal-inference-lab/thermal_inference_lab/distributions/: __init__.py  boltzmann.py  exact_enumeration.py  observables.py  partition.py
thermal-inference-lab/thermal_inference_lab/energy/: __init__.py  base.py  crystal_defects.py  harmonic.py  ising.py  lattice_gas.py  rbm.py
thermal-inference-lab/thermal_inference_lab/experiments/: __init__.py  anneal_binary_problem.py  compare_samplers.py  estimate_temperature.py  recover_ising_parameters.py  run_ising.py  train_rbm.py
thermal-inference-lab/thermal_inference_lab/inference/: __init__.py  contrastive_divergence.py  fit_result.py  parameter_estimation.py  pseudolikelihood.py  temperature_estimation.py
thermal-inference-lab/thermal_inference_lab/optimizers/: __init__.py  adam.py  adamw.py  base.py  momentum.py  nesterov.py  sgd.py
thermal-inference-lab/thermal_inference_lab/samplers/: __init__.py  base.py  chain.py  diagnostics.py  gibbs.py  metropolis.py
thermal-inference-lab/thermal_inference_lab/visualization/: __init__.py  diagnostics_plot.py  energy_plot.py  lattice_plot.py  phase_plot.py
(+6 files in other folders)
