[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deep-optimizer-lab"
version = "0.1.0"
description = "A minimal PyTorch experiment framework for training and evaluating neural networks on toy datasets with YAML-based configuration and visualization utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["deep-learning", "pytorch", "neural-networks", "machine-learning", "experiment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
