[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-inference-lab"
version = "0.1.0"
description = "NumPy-only scientific computing lab for Boltzmann samplers, energy-based models, and parameter inference on Ising-style physical systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ising", "boltzmann", "metropolis", "gibbs", "rbm", "simulated-annealing", "energy-based-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thermal_inference_lab*"]
